--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                         <li><strong>Casillas de Acción (Cruz):</strong> Te desafiarán a tomar una decisión o a comprometerte con un cambio.</li>
                         <li><strong>Casillas de Luz (Fósforo):</strong> Te ofrecerán una verdad o una perspectiva que te ayudará a soltar tus cargas.</li>
                         <li><strong>Casillas de Bonus (Estrella):</strong> Te darán una tirada adicional del dado que te permitirá avanzar más en tu camino.</li>
-                        <li><strong>Bonificación Comunitaria:</strong> Cuando la mitad de los jugadores hayan llegado a la casilla final del tablero, se le otorgarán tiradas dobles a los jugadores restantes hasta terminar el tablero</li>
+                        <li><strong>Bonificación Comunitaria:</strong> Cuando la mitad de los jugadores hayan llegado a la casilla final del tablero, se le otorgarán tiradas dobles a los jugadores restantes hasta terminar el tablero.</li>
                     </ul>
                     <p class="mt-3">Recuerda: No hay respuestas correctas o incorrectas. Lo importante es la honestidad contigo mismo y la reflexión.</p>
                 </div>
